Fix browser crash when clicking "Change Password" or "Site is legitimate"

Bug: 771924
Change-Id: Ib4feb9a121bef8d76ba3ec07a531e3504b37865a
Reviewed-on: https://chromium-review.googlesource.com/706137
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Commit-Queue: Jialiu Lin <jialiul@chromium.org>
Cr-Commit-Position: refs/heads/master@{#507392}
Former-commit-id: f7ffc412029188fe9f2ec7b155d32f57dbff4544